# YADRO_CPP_TASK

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/client/: client.cpp  client.hpp
src/core/club/: club.cpp  club.hpp
src/core/events/: event.cpp  event.hpp
src/core/place/: place.cpp  place.hpp
src/core/waiting_queue/: waiting_queue.cpp  waiting_queue.hpp
src/events/: event.cpp  event.hpp
src/events/factory/: event_factory.cpp  event_factory.hpp
src/events/incoming/: incoming_events.cpp  incoming_events.hpp
src/events/outgoing/: outgoing_events.cpp  outgoing_events.hpp
src/io/parser/: parser.cpp  parser.hpp
src/utils/time/: time.cpp  time.hpp
tests/: CMakeLists.txt
tests/unit/: client_place_tests.cpp  club_tests.cpp  event_tests.cpp  parser_tests.cpp  time_tests.cpp
